# Automata

./: Cargo.toml  README.md
src/input/: constants.rs  mod.rs
src/map/: constants.rs  mod.rs
src/map/systems/: setup.rs
